Bug 843886 - Fix CALLPROP to check for __noSuchMethod__ only if the input is an object. r=djvj